# mm_grpo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml
examples/configs/: openai_client_scorer_example.yaml
examples/flowgrpo_trainer/: README.md  run_sd3.sh  run_sd3_1p.sh  run_sd3_2p_async.sh  run_sd3_batch_reward.sh  run_sd3_fast.sh  run_sd3_fast_1p.sh  run_sd3_multi_reward_async.sh
examples/flowgrpo_trainer/experimental/: README.md  run_sd3_3p_a1_r2.sh  run_sd3_fast_2p_a1_r1.sh  run_sd3_fast_3p_a1_r2.sh  run_sd3_fast_3p_a2_r1.sh
examples/flowgrpo_trainer/exprimental/: run_sd3_2p_a1_r1.sh  run_sd3_3p_a2_r1.sh  run_sd3_fast_2p_a1_r1.sh  run_sd3_fast_3p_a2_r1.sh
gerl/: __init__.py  protocol.py
gerl/trainer/: main_flowgrpo.py
gerl/trainer/config/: __init__.py  algorithm.py  ppo_trainer.yaml
gerl/trainer/ppo/: async_utils.py  core_algos.py  metric_utils.py  ray_diffusion_trainer.py  reward.py
gerl/utils/: tracking.py
gerl/utils/checkpoint/: fsdp_checkpoint_manager.py
gerl/utils/dataset/: __init__.py  diffusion_dataset.py  text_dataset.py
gerl/utils/lora/: __init__.py  lora.py
gerl/utils/reward_score/: __init__.py  multi.py  (+5 more)
gerl/workers/: diffusers_fsdp_workers.py  diffusion_fsdp_workers.py
recipe/customize_reward/: README.md
tests/: README.md
tests/reward_score/: run_reward_async.py  run_reward_fns.py  run_reward_fns.sh
tests/special_sanity/: check_docstrings.py  check_license.py
tests/trainer/: __init__.py
(+71 files in other folders)
