[project]
name = "gerl"
version = "0.1.0.dev"
description = "An easy-to-use and fast library to support RL training for multi-modal generative models, built on top of verl, vLLM, and diffusers."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [] # TODO: add authors
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "flashinfer-python>=0.5.3",
    "peft>=0.18.0",
    "transformers>=4.57.3",
    "verl",
]


[project.scripts]
gerl_flowgrpo = "gerl.trainer.main_flowgrpo:main"


[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mktestdocs>=0.2.5", "mypy>=1.19.0", "pytest>=9.0.1"]
ocr = ["paddleocr>=3.3.2", "paddlepaddle>=3.2.2", "python-levenshtein>=0.27.3"]
wandb = ["wandb>=0.23.0"]

[tool.uv]
default-groups = ["wandb"]

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv*",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]
line-length = 119
# Ignored rules:
# "E501" -> line length violation
lint.ignore = ["E501"]
lint.select = ["E", "F", "W"]

[tool.uv.sources]
verl = { git = "https://github.com/volcengine/verl.git" }
